# balam

./: .env.example  .gitignore  CLAUDE.md  README.md  biome.json  config.example.yaml  package.json  tsconfig.base.json
.claude/: settings.json
apps/backend/: package.json  pyproject.toml
apps/backend/scripts/: dump_openapi.py
apps/backend/src/: index.ts  scaffold.test.ts
apps/backend/src/balam/: __init__.py  agent_tools.py  app.py  approvals.py  attachments.py  bot.py  config.py  content_store.py  contexts.py  git_diff.py  markdown.py  mcp_config.py  miniapp.py  opencode.py  opencode_tools.py  permissions.py  router.py  server.py  store.py  streamer.py  telegram_utils.py  turns.py  vnc.py  webapp_auth.py
apps/backend/src/balam/agent/: __init__.py  backend.py  claude_sdk_backend.py  events.py  opencode_backend.py
apps/backend/tests/: conftest.py  test_agent_tools.py  test_approvals.py  test_attachments.py  test_bot.py  test_claude_sdk_backend.py  test_config.py  test_content_store.py  test_contexts.py  test_git_diff.py  test_markdown.py  test_mcp_config.py  test_miniapp.py  test_opencode.py  test_opencode_backend.py  test_permissions.py  test_router.py  test_server.py  test_store.py  test_streamer.py  test_vnc.py  test_webapp_auth.py
deploy/: README.md  balam-opencode.service  balam.service  cloudflared-balam.service  cloudflared-balam.yml  install.sh  refresh-tunnel-url.sh
docs/: architecture-decisions.md  balam-core-feature-recommendations.md  balam-tier1-implementation-plan.md  claude-cli-gated-features.md  codebase-guide.md  design-system.md  feedback.md  (+5 more)
(+42 files in other folders)
